--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,8 @@
               <p style="text-align:center">
                 <a target="_blank" href="https://mailhide.io/e/WMbqIGj4"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/78ij">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://dblp.org/pid/340/7628.html">DBLP</a>
+                <a href="https://dblp.org/pid/340/7628.html">DBLP</a> &nbsp;/&nbsp;
+                <a href="tn/images/jmsun_cv.pdf">CV</a>
               </p>
             </td>
             <td style="padding:0.7%;width:40%;max-width:40%">
